[gd_scene load_steps=4 format=3 uid="uid://bpgb66jvhsx41"]

[ext_resource type="Script" path="res://Environments/TillableLand.gd" id="1_8dn5u"]
[ext_resource type="Texture2D" uid="uid://bajo7cf5jeqif" path="res://Assets/EnvironmentSprites/Normal Land-Sheet.png" id="2_uhi14"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sb865"]
size = Vector2(39, 37)

[node name="TillableLand" type="Area2D"]
script = ExtResource("1_8dn5u")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_uhi14")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_sb865")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
